# ray_tracing

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  premake5.lua
src/: AABB.h  BVH.h  Camera.h  Hitable.h  HitableList.h  Material.h  Ray.h  Sphere.h  Vec.h  main.cpp
